# ocaml-tutorial

first_program/: dune-project
first_program/lib/: dune
first_program/test/: dune
