(lang dune 3.20)

(name first_program)

(generate_opam_files true)

(source
 (github username/reponame))

(maintainers "Maintainer Name <maintainer@example.com>")

(package
 (name first_program)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
